--- a/mywork.html
+++ b/mywork.html
@@ -9,9 +9,9 @@
 <div id="myNav" class="overlay">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <div class="overlay-content">
-		<a class="awhite" href="#">Home</a>
-    <a class="awhite" href="#">My Work</a>
-    <a class="awhite" href="#">Contact</a>
+		<a class="awhite" href="index.html">Home</a>
+    <a class="awhite" href="mywork.html">My Work</a>
+    <a class="awhite" href="contact.html">Contact</a>
 	<div class="faicons">
 		<a href="https://github.com/Doctor-blob" class="fa fa-github"></a>
 		<a href="https://www.reddit.com/user/doctor_blob/" class="fa fa-reddit"></a>
