--- a/index.html
+++ b/index.html
@@ -2,36 +2,104 @@
 		<title>Home</title>
 			<link type="text/css" rel="stylesheet" href="Css/stylesheet.css"/>
 			<script src="Javascript/Javascript.js"></script>
-			<link rel="icon" href="Pictures/Logo.png">
+			<link rel="icon" href="Pictures/XProfile3.png">
 			<meta name="viewport" content="width=device-width, initial-scale=1" />
+			<link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<head>
-<div id="myNav" class="overlay">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <div class="overlay-content">
-		<a class="awhite" href="index.html">Home</a>
-    <a class="awhite" href="mywork.html">My Work</a>
-    <a class="awhite" href="contact.html">Contact</a>
-	<div class="faicons">
-		<a href="https://github.com/Doctor-blob" class="fa fa-github"></a>
-		<a href="https://www.reddit.com/user/doctor_blob/" class="fa fa-reddit"></a>
-		<a href="https://www.youtube.com/channel/UCR8PfX5r2XU2WB49iKYrqMg" class="fa fa-youtube"></a>
-		<a href="https://soundcloud.com/doctor_blob" class="fa fa-soundcloud"></a>
-	</div>
-  </div>
-</div>
-<span style="font-size:60px;cursor:pointer" onclick="openNav()">&#9776;</span>
-		</head>
+	<head>
+		<nav class="social">
+					<ul>
+							<li><a href="https://github.com/Doctor-blob">Github</a><i class="fa fa-github"></i></li>
+							<li><a href="https://www.twitch.tv/doctorblobs">twitch</a><i class="fa fa-twitch"></i></li>
+							<li><a href="https://www.youtube.com/channel/UCR8PfX5r2XU2WB49iKYrqMg">Youtube</a><i class="fa fa-youtube"></i></li>
+							<li><a href="https://soundcloud.com/doctor_blob">Soundcloud</a><i class="fa fa-soundcloud"></i></li>
+							<li><a href="mailto:jetze.hettema@Gmail.com">Mail me</a><i class="fa fa-mail-forward"></i></li>
+					</ul>
+			</nav>
+	</head>
 		<body>
+	<div class="spacing100px"></div>
+		<div class="wrapper">
 			<div class="padding">
-  			<h1 class="h1black">Hobbyist Front-end Developer &amp; Student</h1>
-				<h1> <h1>
-      	<h2 class="pblack">I design and code Simple and Nice websites.</h2>
+  			<h1 class="bigblacktext">Hobbyist Front-end Developer &amp; Student</h1>
+      	<h2 class="smallblacktext">I design and code Simple and Nice websites.</h2>
+				<img class="profileimg" src="Pictures/XProfile3.png">
 			</div>
+		</div>
+		<div class="spacing200px">	</div>
 			<div class="bannerimage">
-				<h1 class="h1white">Hobbyist Front-end Developer &amp; Student</h1>
-				<h2 class="pWhite">I design and code Simple and Nice websites.</h2>
+				<div class="spacing10px"></div>
+				<div class="flex">
+				<img class="imagesize750px","imageleft" src="Pictures/XProfile2.png">
+				<div class="padding">
+				<div class="container1200px">
+				<div class="textright">
+				<h1 class="bigwhitetext">Hi I'm Jetze Hettema</h1>
+      	<h2 class="smallwhitetext">I like to write code for school and make music in my free time.</h2>
+				<h2 class="smallwhitetext">I'm a student at the Metis Montessori Lyceum at this school I follow a coding class that teaches me things like Html, Css, Javascript, Python, C# and 3d moddeling.</h2>
+				<h2 class="smallwhitetext">I really like game and website design.</h2>
+				<h2 class="smallwhitetext">I also make music with Ableton in my free time I really like making lo-fi stuff but I still want to get better at music making.</h2>
 			</div>
-
-		</body>
+			</div>
+			</div>
+			</div>
+			</div>
+			</div>
+			</div>
+		<div class="spacing200px"></div>
+		<h1 class="bigblacktext">My Work and Collaborations with other people</h1>
+		<h2 class="smallblacktext">Here you will find what I worked on and which projects I'm currently working on.</h2>
+		<div class="spacing100px"></div>
+	<div class="box">
+		<div class="collum">
+			<div class="spacing10px"></div>
+			<img class="logoimg" src="Pictures/Warchild.png" alt="">
+				<h1 class="bigwhitetext">Warchild</h1>
+				<p class="smallwhitetextleft">A blender animation to spread awareness about children in warzones.</p>
+				<p class="smallwhitetextleft">I made this animation in collaboration with Gast2405, Dadeva.</p>
+				<p class="smallwhitetextleft">Programs and Languages used:</p>
+				<ul class="list">
+				  <li>Blender</li>
+				  <li>Krita (For the Textures)</li>
+				  <li></li>
+				</ul>
+				<p class="smallwhitetextleft">Status: Finished</p>
+			</div>
+		<div class="collum">
+			<div class="spacing10px"></div>
+			<img class="logoimg" src="Pictures/Html.png" alt="">
+			<h1 class="bigwhitetext">Jetzz.nl</h1>
+			<p class="smallwhitetextleft">I'm Currently working so that it will look simple, nice and so I can use it as my Portfolio.</p>
+		  <p class="smallwhitetextleft">The source code can be found on github (see social media links)</p>
+			<p class="smallwhitetextleft">Programs and Languages used:</p>
+			<ul class="list">
+			  <li>Atom</li>
+			  <li>Krita (For the Icons)</li>
+			  <li>Html & Css</li>
+			</ul>
+			<p class="smallwhitetextleft">Status: Ongoing</p>
+		</div>
+		<div class="collum">
+			<div class="spacing10px"></div>
+			<img class="logoimg" src="Pictures/Unity.png" alt="">
+			<h1 class="bigwhitetext">Untitled Game</h1>
+			<p class="smallwhitetextleft">An untitled Unity Game that I just started making with Gast2405, SparkleSpark, Gruble and Dadeval.</p>
+			<p class="smallwhitetextleft">I'm doing the sound design and music making for this game.</p>
+			<p class="smallwhitetextleft">Programs and Languages used:</p>
+			<ul class="list">
+				<li>Unity</li>
+				<li>Ableton</li>
+				<li>Krita</li>
+				<li>C#</li>
+			</ul>
+			<p class="smallwhitetextleft">Status: Ongoing</p>
+		</div>
+	</div>
+		<div class="spacing200px"></div>
+	</div>
+		</div>
+	</div>
+	<div class="spacing300px">	</div>
+	   </div>
+	</body>
 </html>
