--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
 	<head>
 		<nav class="social">
 					<ul>
+							<li><a href="">Website Pages</a></li>
+							<li><a href="index.html">Home</a><i class="fa fa-home"></i></li>
+							<li><a href="Projects.html">Projects</a><i class="fa fa-suitcase"></i></li>
+							<li><a href="Badges.html">Badges</a><i class="fa fa-key"></i></li>
+							<li><a href="Contact.html">Contact</a><i class="fa fa-phone"></i></li>
+							<li><a href="">Social media</a></li>
 							<li><a href="https://github.com/Doctor-blob">Github</a><i class="fa fa-github"></i></li>
 							<li><a href="https://www.twitch.tv/doctorblobs">twitch</a><i class="fa fa-twitch"></i></li>
 							<li><a href="https://www.youtube.com/channel/UCR8PfX5r2XU2WB49iKYrqMg">Youtube</a><i class="fa fa-youtube"></i></li>
 							<li><a href="https://soundcloud.com/doctor_blob">Soundcloud</a><i class="fa fa-soundcloud"></i></li>
-							<li><a href="mailto:jetze.hettema@Gmail.com">Mail me</a><i class="fa fa-mail-forward"></i></li>
 					</ul>
 			</nav>
 	</head>
@@ -37,7 +42,7 @@
 				<h1 class="bigwhitetext">Hi I'm Jetze Hettema</h1>
       	<h2 class="smallwhitetext">I like to write code for school and make music in my free time.</h2>
 				<h2 class="smallwhitetext">I'm a student at the Metis Montessori Lyceum at this school I follow a coding class that teaches me things like Html, Css, Javascript, Python, C# and 3d moddeling.</h2>
-				<h2 class="smallwhitetext">I really like game and website design.</h2>
+				<h2 class="smallwhitetext">I really like game and website design (like with this website) I really want to be a professional game- or website dev ,.</h2>
 				<h2 class="smallwhitetext">I also make music with Ableton in my free time I really like making lo-fi stuff but I still want to get better at music making.</h2>
 			</div>
 			</div>
@@ -101,5 +106,7 @@
 	</div>
 	<div class="spacing300px">	</div>
 	   </div>
+	<div class="footer">
+	</div>
 	</body>
 </html>
