--- a/index.html
+++ b/index.html
@@ -1,33 +1,41 @@
 <html>
 		<title>Home</title>
-			<link type="text/css" rel="stylesheet" href="Css/stylesheet.css"/>
-			<script src="Javascript/Javascript.js"></script>
-			<link rel="icon" href="Pictures/XProfile3.png">
-			<meta name="viewport" content="width=device-width, initial-scale=1" />
-			<link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
-			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link type="text/css" rel="stylesheet" href="Css/stylesheet.css"/>
+		<script src="Javascript/Javascript.js"></script>
+		<link rel="icon" href="Pictures/XProfile3.png">
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<head>
-		<nav class="social">
-					<ul>
-							<li><a href="">Website Pages</a></li>
-							<li><a href="index.html">Home</a><i class="fa fa-home"></i></li>
-							<li><a href="Projects.html">Projects</a><i class="fa fa-suitcase"></i></li>
-							<li><a href="Badges.html">Badges</a><i class="fa fa-key"></i></li>
-							<li><a href="Contact.html">Contact</a><i class="fa fa-phone"></i></li>
-							<li><a href="">Social media</a></li>
-							<li><a href="https://github.com/Doctor-blob">Github</a><i class="fa fa-github"></i></li>
-							<li><a href="https://www.twitch.tv/doctorblobs">twitch</a><i class="fa fa-twitch"></i></li>
-							<li><a href="https://www.youtube.com/channel/UCR8PfX5r2XU2WB49iKYrqMg">Youtube</a><i class="fa fa-youtube"></i></li>
-							<li><a href="https://soundcloud.com/doctor_blob">Soundcloud</a><i class="fa fa-soundcloud"></i></li>
-					</ul>
-			</nav>
-	</head>
+		<nav class="navbar navbar-default navbar-fixed-top">
+				<div class="container">
+						<div class="navbar-header">
+								<button type="button" class="navbar-toggle" data-toggle="collapse"
+												data-target="#myNavbar">
+										<span class="glyphicon glyphicon-menu-hamburger"></span>
+								</button>
+				<h1 class="brand brand-name navbar-left"><div class"navbar-left">Jetze</h1>
+						</div>
+						<div class="collapse navbar-collapse navbar-right" id="myNavbar">
+								<ul class="nav navbar-nav">
+							<li><a href="index.html">Home</a></li>
+							<li><a href="Projects.html">Projects</a></li>
+							<li><a href="Badges.html">Badges</a></li>
+							<li><a href="Contact.html">Contact</a></li>
+								</ul>
+						</div>
+				</div>
+		</nav>
+</head>
 		<body>
 	<div class="spacing100px"></div>
 		<div class="wrapper">
 			<div class="padding">
   			<h1 class="bigblacktext">Hobbyist Front-end Developer &amp; Student</h1>
-      	<h2 class="smallblacktext">I design and code Simple and Nice websites.</h2>
+      	<h3 class="smallblacktext">I design and code Simple and Nice websites.</h3>
 				<img class="profileimg" src="Pictures/XProfile3.png">
 			</div>
 		</div>
@@ -42,8 +50,8 @@
 				<h1 class="bigwhitetext">Hi I'm Jetze Hettema</h1>
       	<h2 class="smallwhitetext">I like to write code for school and make music in my free time.</h2>
 				<h2 class="smallwhitetext">I'm a student at the Metis Montessori Lyceum at this school I follow a coding class that teaches me things like Html, Css, Javascript, Python, C# and 3d moddeling.</h2>
-				<h2 class="smallwhitetext">I really like game and website design (like with this website) I really want to be a professional game- or website dev ,.</h2>
-				<h2 class="smallwhitetext">I also make music with Ableton in my free time I really like making lo-fi stuff but I still want to get better at music making.</h2>
+				<h2 class="smallwhitetext">I really like game and website design (like with this website) I really want to be a professional  Vr gamedeveloper.</h2>
+				<h2 class="smallwhitetext">I also make music with Ableton in my free time I really like making lo-fi music but I still want to get better at making other types of music.</h2>
 			</div>
 			</div>
 			</div>
@@ -51,59 +59,6 @@
 			</div>
 			</div>
 			</div>
-		<div class="spacing200px"></div>
-		<h1 class="bigblacktext">My Work and Collaborations with other people</h1>
-		<h2 class="smallblacktext">Here you will find what I worked on and which projects I'm currently working on.</h2>
-		<div class="spacing100px"></div>
-	<div class="box">
-		<div class="collum">
-			<div class="spacing10px"></div>
-			<img class="logoimg" src="Pictures/Warchild.png" alt="">
-				<h1 class="bigwhitetext">Warchild</h1>
-				<p class="smallwhitetextleft">A blender animation to spread awareness about children in warzones.</p>
-				<p class="smallwhitetextleft">I made this animation in collaboration with Gast2405, Dadeva.</p>
-				<p class="smallwhitetextleft">Programs and Languages used:</p>
-				<ul class="list">
-				  <li>Blender</li>
-				  <li>Krita (For the Textures)</li>
-				  <li></li>
-				</ul>
-				<p class="smallwhitetextleft">Status: Finished</p>
-			</div>
-		<div class="collum">
-			<div class="spacing10px"></div>
-			<img class="logoimg" src="Pictures/Html.png" alt="">
-			<h1 class="bigwhitetext">Jetzz.nl</h1>
-			<p class="smallwhitetextleft">I'm Currently working so that it will look simple, nice and so I can use it as my Portfolio.</p>
-		  <p class="smallwhitetextleft">The source code can be found on github (see social media links)</p>
-			<p class="smallwhitetextleft">Programs and Languages used:</p>
-			<ul class="list">
-			  <li>Atom</li>
-			  <li>Krita (For the Icons)</li>
-			  <li>Html & Css</li>
-			</ul>
-			<p class="smallwhitetextleft">Status: Ongoing</p>
-		</div>
-		<div class="collum">
-			<div class="spacing10px"></div>
-			<img class="logoimg" src="Pictures/Unity.png" alt="">
-			<h1 class="bigwhitetext">Untitled Game</h1>
-			<p class="smallwhitetextleft">An untitled Unity Game that I just started making with Gast2405, SparkleSpark, Gruble and Dadeval.</p>
-			<p class="smallwhitetextleft">I'm doing the sound design and music making for this game.</p>
-			<p class="smallwhitetextleft">Programs and Languages used:</p>
-			<ul class="list">
-				<li>Unity</li>
-				<li>Ableton</li>
-				<li>Krita</li>
-				<li>C#</li>
-			</ul>
-			<p class="smallwhitetextleft">Status: Ongoing</p>
-		</div>
-	</div>
-		<div class="spacing200px"></div>
-	</div>
-		</div>
-	</div>
 	<div class="spacing300px">	</div>
 	   </div>
 	<div class="footer">
