--- a/Badges.html
+++ b/Badges.html
@@ -1,28 +1,35 @@
 <html>
-		<title>Home</title>
+		<title>Badges</title>
 			<link type="text/css" rel="stylesheet" href="Css/stylesheet.css"/>
 			<script src="Javascript/Javascript.js"></script>
 			<link rel="icon" href="Pictures/XProfile3.png">
 			<meta name="viewport" content="width=device-width, initial-scale=1" />
 			<link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<head>
-		<nav class="social">
-					<ul>
-							<li><a href="">Website Pages</a></li>
-							<li><a href="index.html">Home</a><i class="fa fa-home"></i></li>
-							<li><a href="Projects.html">Projects</a><i class="fa fa-suitcase"></i></li>
-							<li><a href="Badges.html">Badges</a><i class="fa fa-key"></i></li>
-							<li><a href="Contact.html">Contact</a><i class="fa fa-phone"></i></li>
-							<li><a href="">Social media</a></li>
-							<li><a href="https://github.com/Doctor-blob">Github</a><i class="fa fa-github"></i></li>
-							<li><a href="https://www.twitch.tv/doctorblobs">twitch</a><i class="fa fa-twitch"></i></li>
-							<li><a href="https://www.youtube.com/channel/UCR8PfX5r2XU2WB49iKYrqMg">Youtube</a><i class="fa fa-youtube"></i></li>
-							<li><a href="https://soundcloud.com/doctor_blob">Soundcloud</a><i class="fa fa-soundcloud"></i></li>
-					</ul>
+			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+		<head>
+			<nav class="navbar navbar-default navbar-fixed-top">
+			    <div class="container">
+			        <div class="navbar-header">
+			            <button type="button" class="navbar-toggle" data-toggle="collapse"
+			                    data-target="#myNavbar">
+			                <span class="glyphicon glyphicon-menu-hamburger"></span>
+			            </button>
+					<h1 class="brand brand-name navbar-left"><div class"navbar-left">Jetze</h1>
+			        </div>
+			        <div class="collapse navbar-collapse navbar-right" id="myNavbar">
+			            <ul class="nav navbar-nav">
+			           <li><a href="index.html">Home</a></li>
+			   				<li><a href="Projects.html">Projects</a></li>
+			   				<li><a href="Badges.html">Badges</a></li>
+			    			<li><a href="Contact.html">Contact</a></li>
+			            </ul>
+			        </div>
+			    </div>
 			</nav>
-	</head>
 		<body>
-
+			<iframe src="https://www.badgecraft.eu/auto/wallet/badge-maps/b598d865-a0cb-44bc-8217-f3a8590dca3d/public" onload="this.width=screen.width;this.height=screen.height;" title="W3Schools Free Online Web Tutorials"></iframe>
 	</body>
 </html>
