--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
 			<div class="bannerimage">
 				<div class="spacing10px"></div>
 				<div class="flex">
-				<img class="imagesize750px","imageleft" src="Pictures/XProfile2.png">
+				<img class="imagesize600px","imageleft" src="Pictures/XProfile2.png">
 				<div class="padding">
 				<div class="container1200px">
 				<div class="textright">
 				<h1 class="bigwhitetext">Hi I'm Jetze Hettema</h1>
       	<h2 class="smallwhitetext">I like to write code for school and make music in my free time.</h2>
 				<h2 class="smallwhitetext">I'm a student at the Metis Montessori Lyceum at this school I follow a coding class that teaches me things like Html, Css, Javascript, Python, C# and 3d moddeling.</h2>
-				<h2 class="smallwhitetext">I really like game and website design (like with this website) I really want to be a professional  Vr gamedeveloper.</h2>
+				<h2 class="smallwhitetext">I really like game and website design (like with this website) I really want to be a Vr gamedeveloper.</h2>
 				<h2 class="smallwhitetext">I also make music with Ableton in my free time I really like making lo-fi music but I still want to get better at making other types of music.</h2>
 			</div>
 			</div>
