specification for website project

--- a/Projects.html
+++ b/Projects.html
@@ -54,8 +54,8 @@
 				<div class="spacing10px"></div>
 				<img class="logoimg" src="Pictures/Html.png" alt="">
 				<h1 class="bigwhitetext">Jetzz.nl</h1>
-				<p class="smallwhitetextleft">I'm Currently working so that it will look simple, nice and so I can use it as my Portfolio.</p>
-			  <p class="smallwhitetextleft">The source code can be found on github (see social media links)</p>
+				<p class="smallwhitetextleft">I'm Currently working on this site so that it will look simple, nice and so I can use it as my Portfolio.</p>
+			  <p class="smallwhitetextleft">The source code can be found on github</p>
 				<p class="smallwhitetextleft">Programs and Languages used:</p>
 				<ul class="list">
 				  <li>Atom</li>
