--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 	<div class="spacing100px"></div>
 		<div class="wrapper">
 			<div class="padding">
+				<h1 class="bigblacktext">Hobbyist Front-end Developer &amp; Student</h1>
   			<h1 class="bigblacktext">Hobbyist Front-end Developer &amp; Student</h1>
       	<h3 class="smallblacktext">I design and code Simple and Nice websites.</h3>
 				<img class="profileimg" src="Pictures/XProfile3.png">
