--- a/Contact.html
+++ b/Contact.html
@@ -54,7 +54,7 @@
 		    </div>
 				<div class="spacing10px"></div>
 		    <div class="ccfield-prepend">
-		        <textarea class="ccformfield" name="Sessage" rows="8" placeholder="Message" required></textarea>
+		        <textarea class="ccformfield" name="Message" rows="8" placeholder="Message" required></textarea>
 		    </div>
 				<div class="spacing10px"></div>
 		    <div class="ccfield-prepend">
