--- a/index.html
+++ b/index.html
@@ -1,67 +1,236 @@
-<html>
-		<title>Home</title>
-		<link type="text/css" rel="stylesheet" href="Css/stylesheet.css"/>
-		<script src="Javascript/Javascript.js"></script>
-		<link rel="icon" href="Pictures/XProfile3.png">
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<head>
-		<nav class="navbar navbar-default navbar-fixed-top">
-				<div class="container">
-						<div class="navbar-header">
-								<button type="button" class="navbar-toggle" data-toggle="collapse"
-												data-target="#myNavbar">
-										<span class="glyphicon glyphicon-menu-hamburger"></span>
-								</button>
-				<h1 class="brand brand-name navbar-left"><div class"navbar-left">Jetze</h1>
-						</div>
-						<div class="collapse navbar-collapse navbar-right" id="myNavbar">
-								<ul class="nav navbar-nav">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="Projects.html">Projects</a></li>
-							<li><a href="Badges.html">Badges</a></li>
-							<li><a href="Contact.html">Contact</a></li>
-								</ul>
-						</div>
-				</div>
-		</nav>
-</head>
-		<body>
-	<div class="spacing100px"></div>
-		<div class="wrapper">
-			<div class="padding">
-				<h1 class="bigblacktext">Hobbyist Front-end Developer &amp; Student</h1>
-      	<h3 class="smallblacktext">I design and code Simple and Nice websites.</h3>
-				<img class="profileimg" src="Pictures/XProfile3.png">
-			</div>
-		</div>
-		<div class="spacing200px">	</div>
-			<div class="bannerimage">
-				<div class="spacing10px"></div>
-				<div class="flex">
-				<img class="imagesize600px","imageleft" src="Pictures/XProfile2.png">
-				<div class="padding">
-				<div class="container1200px">
-				<div class="textright">
-				<h1 class="bigwhitetext">Hi I'm Jetze Hettema</h1>
-      	<h2 class="smallwhitetext">I like to write code for school and make music in my free time.</h2>
-				<h2 class="smallwhitetext">I'm a student at the Metis Montessori Lyceum at this school I follow a coding class that teaches me things like Html, Css, Javascript, Python, C# and 3d moddeling.</h2>
-				<h2 class="smallwhitetext">I really like game and website design (like with this website) I really want to be a Vr gamedeveloper.</h2>
-				<h2 class="smallwhitetext">I also make music with Ableton in my free time I really like making lo-fi music but I still want to get better at making other types of music.</h2>
-			</div>
-			</div>
-			</div>
-			</div>
-			</div>
-			</div>
-			</div>
-	<div class="spacing300px">	</div>
-	   </div>
-	<div class="footer">
-	</div>
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/templatemo-style.css" />
+    <title>Home</title>
+
+  </head>
+  <body>
+
+    <!-- Welcome Section -->
+    <section id="tmWelcome" class="parallax-window" data-parallax="scroll" data-image-src="img//Backgrounds/GameArtPicture1.jpg">
+      <div class="container-fluid tm-brand-container-outer">
+        <div class="row">
+          <div class="col-12">
+            <!-- Logo Area -->
+            <!-- Black transparent bg -->
+            <div class="ml-auto mr-0 tm-bg-black-transparent text-white tm-brand-container-inner">
+              <div class="tm-brand-container text-center">
+                <h1 class="tm-brand-name">Jetze Hettema</h1>
+                <p class="tm-brand-description mb-0">I'm a game designer/developer and student at the Metis Montessori Lyceum</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="tm-bg-white-transparent tm-welcome-container">
+        <div class="container-fluid">
+          <div class="row h-100">
+            <!-- Welcome Text -->
+            <!-- White transparent bg -->
+            <div class="col-md-7 tm-welcome-left-col">
+              <div class="tm-welcome-left">
+                <h2 class="tm-welcome-title">My Portfolio</h2>
+                <p class="pb-0">
+                  This is a collection of my projects (Finished and Ongoing) and collaborations with people and brands.
+                </p>
+                <p class="pb-0">
+                 If you want to reach out there's a contact form down below or you can DM me on discord (DoctorBlobs#8917).
+                </p>
+              </div>
+            </div>
+            <!-- Brown bg -->
+            <div class="col-md-5">
+              <div class="tm-welcome-right">
+                <img src="img/Icon/Oneshot.png" alt="Aleq" width="160" height="145" class="centerroundedimage">
+                <p class="mb-0">
+                  I write code for school and make games and art in my free time.
+                  I really like gamedesign, Art, 3D moddeling and video editing.
+                  The Programs
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Welcome section -->
+
+    <!-- Portfolio section -->
+    <section id="tmPortfolio">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12">
+            <div class="tm-portfolio-item">
+              <div class="tm-portfolio-name text-white tm-bg-green">
+                Game Developer
+              </div>
+              <div class="tm-portfolio-description">
+                <h3 class="tm-text-green">
+                  Metis Studio's
+                  <span class="tm-title-small">(2020 January to Present)</span>
+                </h3>
+                <p class="mb-0">
+                  Nullam a tellus ultricies, ornare purus vel, porttitor massa.
+                  Aliquam facilisis purus ac eros sollicidudin, in mollis neque
+                  facilisis. Duis malesuada, mi non elementum malesuada.
+                </p>
+              </div>
+            </div>
+
+            <div class="tm-portfolio-item">
+              <div class="tm-portfolio-name text-white tm-bg-orange">
+                Game Designer
+              </div>
+              <div class="tm-portfolio-description">
+                <h3 class="tm-text-orange">
+                  Studio One
+                  <span class="tm-title-small">(2017 April to 2018 Dec)</span>
+                </h3>
+                <p class="mb-0">
+                  Phasellus ac nulla egestas, malesuada dolor quis, scelerisque
+                  arcu. Morbi aliquam, nunc vel blandit mattis, sapien nisl
+                  convallis sem, quis hendrerit nisl tellus in lectus. Proin at
+                  nibh bibendum, tincidunt mauris sit amet, porta risus. Integer
+                  id malesuada ligula.
+                </p>
+              </div>
+            </div>
+
+            <div class="tm-portfolio-item">
+              <div class="tm-portfolio-name text-white tm-bg-blue">
+                Graphic Designer
+              </div>
+              <div class="tm-portfolio-description">
+                <h3 class="tm-text-blue">
+                  3D Moddeler
+                  <span class="tm-title-small">(2015 Jan to 2016 Dec)</span>
+                </h3>
+                <p class="mb-0">
+                  Etiam porta est nisl, consectetur dapibus ante faucibus id.
+                  Nunc ullamcorper a quam eget tincidunt. Proin vehicula mauris
+                  ipsum, euismod dignissim dolor convallis ac.
+                </p>
+              </div>
+            </div>
+
+            <div class="tm-portfolio-item">
+              <div class="tm-portfolio-name text-white tm-bg-dark-gray">
+                Design School
+              </div>
+              <div class="tm-portfolio-description">
+                <h3 class="tm-text-dark-gray">
+                  Art Design College
+                  <span class="tm-title-small">
+                    (2012 May to 2014 Dec)
+                  </span>
+                </h3>
+                <p class="mb-0">
+                  Etiam porta est nisl, consectetur dapibus ante faucibus id.
+                  Nunc ullamcorper a quam eget tincidunt. Proin vehicula mauris
+                  ipsum, euismod dignissim dolor convallis ac.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- portfolio section -->
+
+    <!-- Contact section -->
+    <div id="tmContact" class="parallax-window" data-parallax="scroll" data-image-src="img//Backgrounds/GameArtPicture2.jpg">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12">
+            <div class="tm-contact-items-container">
+              <div class="tm-contact-item">
+                <i class="fas fa-5x fa-briefcase tm-contact-item-icon"></i>
+                <p class="mb-0">
+                  Quisque venenatis viverra ultrices. Lorem ipsum dolor sit
+                  amet. Nullam sit amet tempor nisl.
+                </p>
+              </div>
+              <div class="tm-contact-item">
+                <i class="fas fa-5x fa-building tm-contact-item-icon"></i>
+                <p class="mb-0">
+                  You can absolutely feel free to use Mini Profile for your web page or any usage for your website.
+                </p>
+              </div>
+
+              <div class="tm-contact-item">
+                <i class="fas fa-5x fa-balance-scale tm-contact-item-icon"></i>
+                <p class="mb-0">
+                  You are NOT allowed to re-distribute this template in any download website. Else, it is illegal action.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Contact Page -->
+        <div class="row">
+          <div class="col-12">
+            <form
+              action="index.html"
+              method="POST"
+              id="tmContactForm"
+              class="tm-bg-white-transparent"
+            >
+              <div class="form-group">
+                <input
+                  type="text"
+                  id="contact_name"
+                  name="contact_name"
+                  class="form-control rounded-0 border-top-0 border-right-0 border-left-0"
+                  placeholder="Name"
+                  required
+                />
+              </div>
+              <div class="form-group">
+                <input
+                  type="email"
+                  id="contact_email"
+                  name="contact_email"
+                  class="form-control rounded-0 border-top-0 border-right-0 border-left-0"
+                  placeholder="Email"
+                  required
+                />
+              </div>
+              <div class="form-group">
+                <textarea
+                  rows="4"
+                  id="contact_message"
+                  name="contact_message"
+                  class="form-control rounded-0 border-top-0 border-right-0 border-left-0"
+                  placeholder="Message"
+                  required
+                ></textarea>
+              </div>
+              <div class="text-center">
+                <button
+                  type="submit"
+                  class="btn tm-btn-submit rounded-0 text-white"
+                >
+                  Submit
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+    </div>
+    <!-- Contact Page -->
+
+    <!-- Scripts -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/parallax.min.js"></script>
+    <!-- Scrpits -->
+
+  </body>
 </html>
