--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <p class="mb-0">
                   I write code for school and make games and art in my free time.
                   I really like gamedesign, Art, 3D moddeling and video editing.
-                  The Programs
+                  The Programs I prodominantly use are: Unity (Game Engine), Blender (3D moddeling), Krita (Art), Davinci (video editing).
                 </p>
               </div>
             </div>
