--- a/index.html
+++ b/index.html
@@ -51,8 +51,12 @@
                 <img src="img/Icon/Oneshot.png" alt="Aleq" width="160" height="145" class="centerroundedimage">
                 <p class="mb-0">
                   I write code for school and make games and art in my free time.
+                </p>
+                <p class="mb-0">
                   I really like gamedesign, Art, 3D moddeling and video editing.
-                  The Programs I prodominantly use are: Unity (Game Engine), Blender (3D moddeling), Krita (Art), Davinci (video editing).
+                </p>
+                <p class="mb-0">
+                  The Programs I prodominantly use are: Unity (Game Engine), Blender (3D modelling), Krita (Art), Davinci (video editing).
                 </p>
               </div>
             </div>
@@ -109,7 +113,7 @@
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-blue">
-                  3D Moddeler
+                  3D Modeller
                   <span class="tm-title-small">(2015 Jan to 2016 Dec)</span>
                 </h3>
                 <p class="mb-0">
